--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "final_project_react",
+  "homepage": "https://jmik-thang.github.io/final_project_react/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
